logger fixes, menu now snaps to top of terminal, removal of depreciated URL